[gd_scene load_steps=16 format=3 uid="uid://bulv7sdl5xrde"]

[ext_resource type="Texture2D" uid="uid://bmcb5bgm6dclo" path="res://assets/ovrwrldbg2.png" id="1_bcutm"]
[ext_resource type="Script" path="res://scripts/home_screen.gd" id="1_gxrwl"]
[ext_resource type="Texture2D" uid="uid://c0vh3sutmm8v7" path="res://assets/stopsign.png" id="3_dvyrs"]
[ext_resource type="Texture2D" uid="uid://bnekm5wlcc6yo" path="res://assets/backcar.png" id="4_g4txf"]
[ext_resource type="AudioStream" uid="uid://cf3y4qdwevwm0" path="res://assets/happy-good-morning-piano-music-272718.mp3" id="5_ci00y"]
[ext_resource type="AudioStream" uid="uid://bhouwwbein653" path="res://assets/rally-car-idle-loop-17-84405.mp3" id="6_mkek0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gm01i"]

[sub_resource type="LabelSettings" id="LabelSettings_h53h6"]
outline_size = 2
outline_color = Color(0.687558, 0.483529, 0.511787, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yft4w"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_agk7e"]
bg_color = Color(0.82, 0.750163, 0.2214, 1)
border_width_left = 4
border_width_top = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n04sl"]
font_size = 60
font_color = Color(0.83, 0.79514, 0.3071, 1)
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_epu25"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("carSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(774.5, 470.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("carSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.9125, 0.8725)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Screen fade:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(668, 269)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Screen fade:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_jcgny"]
resource_name = "drive"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("carSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(774.5, 470.5), Vector2(732, 285)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("carSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.9125, 0.8725), Vector2(0.238125, 0.225625)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Screen fade:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.766667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(668, 269), Vector2(-14, -22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Screen fade:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.766667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-0.159998, 5.96046e-07), Vector2(19, 6.28)]
}

[sub_resource type="Animation" id="Animation_qrduw"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("carSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(774.5, 470.5), Vector2(774.5, 460.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Screen fade:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.0602526, 0.00855531)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1ecv"]
_data = {
"RESET": SubResource("Animation_epu25"),
"drive": SubResource("Animation_jcgny"),
"idle": SubResource("Animation_qrduw")
}

[node name="HomeScreen" type="Node2D"]
position = Vector2(-2, -4)
script = ExtResource("1_gxrwl")

[node name="bg" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(574, 327)
scale = Vector2(1.04455, 0.716667)
texture = ExtResource("1_bcutm")
metadata/_edit_lock_ = true

[node name="CloudSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="nextButton" type="Button" parent="."]
z_index = 1
offset_left = 863.0
offset_top = 178.0
offset_right = 976.0
offset_bottom = 267.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_gm01i")
flat = true

[node name="Label" type="Label" parent="nextButton"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 128.0
offset_bottom = 80.0
text = "  Click for
Next Fight!"
label_settings = SubResource("LabelSettings_h53h6")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 536.0
offset_top = 7.0
offset_right = 993.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/background = SubResource("StyleBoxFlat_yft4w")
theme_override_styles/fill = SubResource("StyleBoxFlat_agk7e")
max_value = 5.0
show_percentage = false

[node name="Label" type="Label" parent="."]
offset_top = -1.0
offset_right = 710.0
offset_bottom = 109.0
text = "Distance Traveled:"
label_settings = SubResource("LabelSettings_n04sl")

[node name="stopsign" type="Sprite2D" parent="."]
position = Vector2(932, 268)
scale = Vector2(0.635, 0.53)
texture = ExtResource("3_dvyrs")
metadata/_edit_lock_ = true

[node name="carSprite" type="Sprite2D" parent="."]
position = Vector2(774.5, 470.5)
scale = Vector2(0.9125, 0.8725)
texture = ExtResource("4_g4txf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o1ecv")
}
autoplay = "idle"

[node name="Screen fade" type="ColorRect" parent="."]
z_index = 3
offset_left = 668.0
offset_top = 269.0
offset_right = 738.0
offset_bottom = 379.0
color = Color(0, 0, 0, 1)

[node name="bgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ci00y")
autoplay = true

[node name="carRev" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_mkek0")
pitch_scale = 2.12

[connection signal="timeout" from="CloudSpawnTimer" to="." method="_on_cloud_spawn_timer_timeout"]
[connection signal="pressed" from="nextButton" to="." method="_on_next_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
